# sql-dojo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  exercises.py  index_old.html  prd-sql-dojo.md  product-requirements.md  pyproject.toml
.claude/: settings.local.json
docs/: CLAUDE.md  prd-sql-dojo.md
docs/session-notes/: 0910-plan-beg-exercises.md  0912-notes.md  deploy-plan-0921.md
modules/: __init__.py  ai_validation.py  auth.py  auth_service.py  exercises.py  logging_config.py  rate_limiting.py  security.py  sql_validation_logger.py
plan/: 0910-plan-beg-exercises.md
requirements/: beginner_sql_exercises.md  prd-sql-dojo.md
session-notes/: 0911-notes.md  0918-notes.md
static/: styles.css
templates/: exercise.html  exercises.html  header.html  index.html
